--- a/src/App.css
+++ b/src/App.css
@@ -46,17 +46,21 @@
   border-width: 1px;
 }
 
-.container-2 {
-  width: 40%;
+.todoInputContainer {
+  width: 50%;
   padding: 50px 0;
   /* height: 300px; */
-  margin: 50px auto;
+  margin: 50px auto 20px;
   /* margin: auto; */
   /* border-width: 2px;
   border-style: solid;
   border-radius: 5px;
   border-color: #282c34; */
-  background-color: #ffff00;
+  background-color: #ffff00;display: flex;
+  /* justify-content: space-evenly; */
+  flex-wrap: wrap;
+  align-content: flex-start;
+  /* gap: 1em; */
 }
 
 .box-1 {
@@ -76,13 +80,6 @@
   font-weight: 700;
 }
 
-.container-2 {
-  display: flex;
-  /* justify-content: space-evenly; */
-  flex-wrap: wrap;
-  align-content: flex-start;
-  /* gap: 1em; */
-}
 
 .item-1 {
   flex: 1;
@@ -99,14 +96,14 @@
   /* height: 100px; */
   resize: none;
   font-size: 16px;
-  font-family: Helvetica;
+  font-family: 'Lato', sans-serif;
   padding: 10px;
 }
 
-#todo {
+#btnTodo {
   padding: 8px 12px;
-  font-family: Helvetica;
   border-radius: 5px;
+  font-family: 'Lato', sans-serif;
   border-color: #1976d2;
   font-size: 15px;
   color: yellow;
@@ -114,9 +111,9 @@
   /* margin: 10px; */
 }
 
-#clear {
+#btnClear {
   padding: 5px 12px;
-  font-family: Helvetica;
+  font-family: 'Lato', sans-serif;
   border-radius: 5px;
   border-color: #1976d2;
   font-size: 15px;
@@ -134,8 +131,12 @@
 }
 
 .box-main {
+  width: 80%;
+  /* width: 1200px; */
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
+  /* justify-content: center; */
+  margin: 0px auto 200px;
 }
 
 .box-2 {
@@ -161,28 +162,44 @@
 }
 
 .todoLabel {
-  font-family: Helvetica;
+  /* font-family: Helvetica; */
+  font-family: 'Lato', sans-serif;
+  font-size: 18px;
   font-weight: 400;
   line-height: 1.6;
 }
 
 .todoNumber {
   /* font-family: Helvetica; */
+  font-family: 'Lato', sans-serif;
   font-size: 20px;
 }
 
 .todoInput {
   text-align: left;
-  width: 15px;
-  height: 15px;
+  width: 20px;
+  height: 20px;
 }
 
 .todoInput:hover {
   cursor: pointer;
-  width: 15px;
-  height: 15px;
+  width: 20px;
+  height: 20px;
 }
 
 .todoContainer {
   text-align: left;
+  background-color: antiquewhite;
+  width: 200px;
+  height: 200px;
+  padding: 10px;
+  /* margin: 10px; */
+}
+
+.todoBox {
+  display: flex;
+  flex-wrap: wrap;
+  /* justify-content: space-between; */
+  align-content: flex-start;
+  gap: 1.8em;
 }
